Implemented modified LSB- working