@@ -4,6 +4,7 @@ import java.awt.image.BufferedImage;
 import java.awt.image.DataBufferByte;
 import java.io.File;
 import java.io.IOException;
+import java.math.BigInteger;
 
 import javax.imageio.ImageIO;
 
@@ -32,15 +33,20 @@ public class Message {
     	String message= new String();
     	String binaryMessage= new String();
         for(int i=1; i<5000; i+=pixelLength) {
-        	int a = pixels[i] & 1;
-        	int b = pixels[i+1] & 1;
-        	int c = pixels[i+2] & 1;
-        	binaryMessage = binaryMessage + new Integer(c).toString() + new Integer(b).toString() + new Integer(a).toString();
+        	//int a = pixels[i] & 1;
+        	int b=-1;
+        	if(BigInteger.valueOf(pixels[i+1]).testBit(3) == true)
+        		b = pixels[i+1] & 1;
+        	else
+        		b = pixels[i+1]>>1  & 1;
+        	//int c = pixels[i+2] & 1;
+        	if(BigInteger.valueOf(pixels[i+1]).testBit(2) == true)
+        		binaryMessage = binaryMessage + new Integer(b).toString();// + new Integer(b).toString() + new Integer(a).toString();
         }
         
         for(int i=0; i<binaryMessage.length()-9; i+=8) {
         	if(binaryMessage.substring(i,i+8).equals("00000000"))
-        		continue;
+        		break;
         	message += Character.toString((char)Integer.parseInt(binaryMessage.substring(i,i+8),2));
         }
     	return message;
